# EasyReverseNative

./: .gitmodules  CMakeLists.txt
shaders/: compile_simple_triangle.bat  simple_triangle.frag  simple_triangle.vert  simple_triangle.vert.spv
src/: Application.cpp  Application.ixx  ApplicationLayers.ixx  Atomic.ixx  BasicContext.cpp  BasicContext.ixx  ImGui.ixx  KeyCodes.ixx  Main.cpp  Main.ixx  MouseCodes.ixx  Util.ixx
src/Events/: AllEvents.ixx  ApplicationEvents.ixx  Event.ixx  EventDefines.hpp  KeyEvents.ixx  MouseEvents.ixx
src/Platform/: Windows.ixx  WindowsUtils.ixx
